Synced dev version with production version

--- a/docker-compose-lnkmgrdev.yml
+++ b/docker-compose-lnkmgrdev.yml
@@ -33,6 +33,8 @@ volumes:
   redis:
   postgress:
   basex-data:
+  dita-ot-data:
+  dita-ot-out:
 
 services:
 
@@ -47,6 +49,9 @@ services:
     extends:
        file: containers/dita-ot/docker-compose.yml  
        service: dita-ot-d4st
+    volumes:
+       - dita-ot-data:/opt/dita-ot/data:Z
+       - dita-ot-out:/opt/dita-ot/out:Z
     volumes_from:
        - web-delivery
  
@@ -74,7 +79,7 @@ services:
       - OXYWEBAUTHOR_PORT
       
     volumes:
-      - basex-data:/data
+      - basex-data:/srv/BaseXData
       - /Users:/Users
       # Use local development versions rather than what's in the container:
       - ${HOME}/workspace-dfst/dfst-linkmgmt-basex/modules:/srv/BaseXRepo
