--- a/docker-compose-lnkmgrdev.yml
+++ b/docker-compose-lnkmgrdev.yml
@@ -35,6 +35,7 @@ volumes:
   basex-data:
   dita-ot-data:
   dita-ot-out:
+  gitlabrunner-config:
 
 services:
 
@@ -77,6 +78,7 @@ services:
       - USER
       - USERNAME
       - OXYWEBAUTHOR_PORT
+      - ENCRYPT_KEY=swordfish
       
     volumes:
       - basex-data:/srv/BaseXData
@@ -134,6 +136,8 @@ services:
     volumes:
       # Create a named volume rather than a local mount:
       - git-data:/home/git/data:Z
+      - ${HOME}/workspace-dfst/dita-for-small-teams/commit-hooks/git/server-side:/var/opt/d4st/custom_hooks
+
 
     environment:
       - GITLAB_SECRETS_DB_KEY_BASE=S8ZRV6kN43LQ2sQVmVfTlM32jLzj8FFLf6L6WzxtjwqnXkZlzpc5tc3C7cXbgrqt
@@ -158,8 +162,9 @@ services:
       - GITLAB_HTTPS=false
       - SSL_SELF_SIGNED=false
   
-      - GITLAB_HOST=localhost
-      - GITLAB_PORT=${GITLAB_PORT}
+      - GITLAB_HOST=gitlab-d4st
+      # Using 80 instead of ${GITLAB_PORT} so within-docker connections will work.
+      - GITLAB_PORT=80
       - GITLAB_SSH_PORT=${GITLAB_SSH_PORT}
       - GITLAB_RELATIVE_URL_ROOT=
   
@@ -262,13 +267,15 @@ services:
 # Define the GitLab runner
 # that will be used to run build jobs;
 #      
-#  gitlab-runner:
-#    image: gitlab/gitlab-runner:latest
-#    container_name: gitlab-runner
-#    restart: always
-#    volumes:
-#      - /var/run/docker.sock:/var/run/docker.sock
-#      - ${HOME}/tmp/gitlab-runner/config:/etc/gitlab-runner
+  gitlab-runner:
+    image: gitlab/gitlab-runner:latest
+    container_name: gitlab-runner
+    restart: always
+    volumes:
+     - /var/run/docker.sock:/var/run/docker.sock
+     - gitlabrunner-config:/etc/gitlab-runner
+    volumes_from:
+     - dita-ot
 
 #
 # Web server for HTML delivery
