Corrected typos in comments, updated getting-started docs to reflect latest versions of software. Added details about editing with oXygenXML Web Author.

--- a/containers/link-manager-basex/Dockerfile
+++ b/containers/link-manager-basex/Dockerfile
@@ -27,7 +27,7 @@ COPY basex/dot_basex  /srv/.basex
 RUN chown basex /srv/.basex
 
 
-# ports are defined basex/basexhttp base container.
+# ports are defined in the basex/basexhttp base container.
 # Switch to the basex user so the BaseX server will start
 # correctly:
 USER basex
